# kaish

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml
crates/kaish-client/: Cargo.toml
crates/kaish-client/src/: completion.rs  embedded.rs  ipc.rs  traits.rs
crates/kaish-glob/: Cargo.toml
crates/kaish-glob/src/: filter.rs  glob.rs  glob_path.rs  ignore.rs  lib.rs  walker.rs
crates/kaish-help/: Cargo.toml
crates/kaish-help/examples/: regen_syntax.rs
crates/kaish-help/src/: compose.rs  content.rs  fragments.rs  lib.rs  topic.rs
crates/kaish-kernel/: Cargo.toml  build.rs
crates/kaish-kernel/src/: arithmetic.rs  ast.rs  backend_walker_fs.rs  dispatch.rs  duration.rs  glob.rs  help.rs  ignore_config.rs  interpreter.rs  kernel.rs  lexer.rs  lib.rs  nonce.rs  output_limit.rs  parser.rs  paths.rs  pidfd.rs  rpc.rs  telemetry.rs  terminal.rs  trash.rs  trash_system.rs  watchdog.rs
crates/kaish-kernel/tests/: background_execution_tests.rs  binary_text_sink_tests.rs  builtin_kernel_tests.rs  cancellation_tests.rs  collections_value_model_tests.rs  concurrency_tests.rs  eval_tests.rs  external_command_tests.rs  for_newline_split_tests.rs  glob_dotfile_tests.rs  heredoc_compat_tests.rs  heredoc_tests.rs  hermetic_home_tests.rs  job_stream_tests.rs  jq_sed_validation_tests.rs  jq_tests.rs  json_sweep_tests.rs  kaish_last_tests.rs  latch_trash_tests.rs  lexer_file_tests.rs  lexer_tests.rs  operand_errors_tests.rs  output_limit_control_tests.rs  overlay_tests.rs  parser_file_tests.rs  parser_tests.rs  patient_watchdog_tests.rs  realworld_builtin_tests.rs  sandbox_mode_tests.rs  shell_bugs_tests.rs  shell_compat_tests.rs  spawn_bool_value_tests.rs  trace_context_tests.rs  validation_tests.rs  vfs_budget_tests.rs  with_backend_dev_tests.rs
crates/kaish-mcp/: Cargo.toml
crates/kaish-mcp-server/: Cargo.toml
crates/kaish-mcp-server/src/: execute.rs  handler.rs  lib.rs  main.rs
crates/kaish-mcp/src/: client.rs  config.rs  lib.rs  main.rs  wrapper.rs
crates/kaish-mcp/src/server/: config.rs  execute.rs  handler.rs  mod.rs  prompts.rs  resources.rs  subscriptions.rs
crates/kaish-mcp/tests/: edge_cases.rs  self_test.rs  stress_test.rs  trace_context_tests.rs
crates/kaish-repl/: Cargo.toml
crates/kaish-repl/src/: format.rs  lib.rs  main.rs
crates/kaish-repl/tests/: integration.rs  pty_job_control.rs
crates/kaish-schema/: Cargo.toml  build.rs
crates/kaish-schema/schema/: kaish.capnp
crates/kaish-schema/src/: lib.rs
crates/kaish-testutil/: Cargo.toml
crates/kaish-testutil/src/: lexer.rs  lib.rs  parser.rs  sexpr.rs
crates/kaish-tool-api/: Cargo.toml
crates/kaish-tool-api/src/: clap_schema.rs  ctx.rs  issue.rs  lib.rs  tool.rs
crates/kaish-tools-git/: Cargo.toml
crates/kaish-tools-git/src/: git_tool.rs
crates/kaish-tools-host/: Cargo.toml
crates/kaish-tools-host/src/: ps.rs
crates/kaish-types/: Cargo.toml
crates/kaish-types/src/: backend.rs  (+6 more)
crates/kaish-vfs/: Cargo.toml
crates/kaish-wasi/: Cargo.toml
crates/kaish-wasi/src/: main.rs
docs/: ARCHITECTURE.md  BUILD.md  BUILTINS.md  EMBEDDING-GIT.md  EMBEDDING.md  GRAMMAR.md  LANGUAGE.md  SHELLCHECK.md  TESTING.md  april-reviews.md  binary-data.md  clap-migration.md  composable-help.md  curl.md  date-upgrades.md  devlog.md  issues.md  kaish-overlayfs.md  kanji.md  plan-for-loop-newline-split.md  reviews.md
docs/help/: overview.md
examples/: 01_hello.kai  02_pipes_and_tools.kai  03_scatter_gather.kai  04_code_indexer.kai  05_mcp_toolkit.kai  06_context_emit.kai  scan.kai
schema/: kaish.capnp  state.sql
scripts/: publish.kai  publish.sh  shellcheck-bourne-subset.sh
tests/eval/: runtime.test
tests/integration/: test_jobs.kai  test_variables.kai
tests/lexer/: tokens.txt
tests/parser/: statements.test
tests/scripts/: control_flow.kai  error_cases.kai  expression_stress.kai  interpolation_edge.kai  scope_stress.kai  stress.kai  unicode.kai
(+232 files in other folders)
