[package]
name = "kaish-mcp-server"
description = "MCP server exposing kaish as a tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kaish-mcp"
path = "src/main.rs"

[dependencies]
kaish-kernel = { path = "../kaish-kernel" }
kaish-mcp = { path = "../kaish-mcp" }
rmcp = { version = "0.13", default-features = false, features = ["server", "transport-io", "macros"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
base64 = "0.22"
directories = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
