[package]
name = "kaish-mcp"
description = "MCP client and server integration for kaish"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaish-kernel = { path = "../kaish-kernel" }
rmcp = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
