[package]
name = "kaish-testutil"
description = "Test utilities for kaish: test file parsers and runners"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaish-kernel = { path = "../kaish-kernel" }

[lints]
workspace = true
